[project]
name = "reddit-rss-cleaner"
version = "0.1.5"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.28.0",
    "feedparser>=6.0.11",
    "feedgen>=1.0.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "trafilatura>=1.12.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.49.0"]

[project.scripts]
reddit-rss-cleaner = "reddit_rss_cleaner.main:run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/reddit_rss_cleaner"]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pyright>=1.1.390",
    "ruff>=0.9.0",
    "respx>=0.21.0",
    # Included in dev so pyright can resolve playwright types in CI.
    # Production Docker builds use --no-dev and install it only via the
    # optional-dependency group when PLAYWRIGHT_ENABLED=true.
    "playwright>=1.49.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "ANN"]

[tool.pyright]
pythonVersion = "3.12"
typeCheckingMode = "strict"

[tool.pytest.ini_options]
asyncio_mode = "auto"

[tool.semantic_release]
version_toml = ["pyproject.toml:project.version"]
branch = "main"
commit_message = "chore(release): v{version}"
